--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,77 @@
+# Core packaging tools (already present)
 setuptools
+
+# High-performance JSON serialization / deserialization
 msgspec==0.19.0
+
+# CA bundle for SSL certificate verification
 certifi==2025.10.5
+
+# Internationalisation (i18n) support
 babel==2.17.0
 flask-babel==4.0.0
+
+# Web micro-framework
 flask==3.1.2
+
+# Template engine
 jinja2==3.1.6
+
+# XML / HTML parser for page scraping
 lxml==6.0.2
+
+# Syntax highlighting in result previews
 pygments==2.19.2
+
+# Date/time parsing helpers
 python-dateutil==2.9.0.post0
+
+# YAML settings loader
 pyyaml==6.0.3
+
+# Modern HTTP client with HTTP/2 support
 httpx[http2]==0.28.1
+
+# SOCKS proxy support (Tor, etc.) for httpx
 httpx-socks[asyncio]==0.10.0
+
+# Redis-compatible client for caching / rate-limit storage
 valkey==6.1.1
+
+# Markdown rendering for engine info pages
 markdown-it-py==3.0.0
+
+# Fast text classification (used by some engines)
 fasttext-predict==0.9.2.4
+
+# TOML parser for Python < 3.11
 tomli==2.3.0; python_version < '3.11'
-msgspec==0.19.0
+
+# CLI helper (used by management scripts)
 typer-slim==0.20.0
+
+# ISO-8601 duration parsing
 isodate==0.7.2
+
+# Static file serving middleware
 whitenoise==6.11.0
+
+# Back-ported typing helpers
 typing-extensions==4.15.0
+
+# --------- NEW: missing async dependencies ---------
+# Async framework detector (required by httpx-socks)
+sniffio>=1.3
+
+# Async compatibility layer (pulls in anyio & trio support)
+anyio>=4
+
+# --------- OPTIONAL speed / reliability ---------
+# Faster JSON for Reddit, GitLab, etc.
+orjson>=3
+
+# Brotli compression support (smaller downloads)
+brotli>=1
+
+# Extra SSL helpers for quirky certificates
+pyopenssl>=24
