--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -6,7 +6,7 @@ use_default_settings: true
 
 general:
   debug: false
-  instance_name: "StillMind"
+  instance_name:  "StillMind"
   privacypolicy_url: false
   donation_url: false
   contact_url: false
@@ -1181,7 +1181,7 @@ engines:
   - name: yahoo
     engine: yahoo
     shortcut: yh
-    disabled: true
+    disabled:false
 
   - name: yahoo news
     engine: yahoo_news
@@ -1256,7 +1256,7 @@ engines:
     base_url: "https://{language}.wikinews.org/"
     number_of_results: 5
     search_type: text
-    disabled: true
+    disabled: false
     about:
       website: https://www.wikinews.org/
       wikidata_id: Q964
@@ -1268,7 +1268,7 @@ engines:
     base_url: "https://{language}.wikiquote.org/"
     number_of_results: 5
     search_type: text
-    disabled: true
+    disabled: false
     additional_tests:
       rosebud: *test_rosebud
     about:
@@ -1606,15 +1606,16 @@ search:
   formats:
     - html
     - json
+    - rss
 
 server:
   port: 8888
   bind_address: "0.0.0.0" # Allow external access
   base_url: false # Set to your domain if needed, e.g., https://your-domain.onrender.com
-  limiter: false # Disabled for private use
+  limiter: true # Disabled for private use
   public_instance: false # Disabled to avoid forcing limiter
-  secret_key: "4Z2TOwrferSce2"
-  image_proxy: false
+  secret_key: "4Z2TOwrferScgsuejhe7883hr"
+  image_proxy: true
   http_protocol_version: "1.1" # Use the latest protocol for better performance
   method: "GET" # Use GET for better user experience
   default_http_headers:
@@ -1636,7 +1637,7 @@ ui:
   url_formatting: pretty
 
 outgoing:
-  request_timeout: 3.0
+  request_timeout: 7.0
   useragent_suffix: ""
   pool_connections: 100
   pool_maxsize: 20
