--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -1949,6 +1949,9 @@ outgoing:
   pool_connections: 100
   pool_maxsize: 20
   enable_http2: true
+  proxies:
+    http: http://${WEB_SHARE_USER}:${WEB_SHARE_PASS}@p.webshare.io:80
+    https: http://${WEB_SHARE_USER}:${WEB_SHARE_PASS}@p.webshare.io:80
 
 plugins:
   searx.plugins.calculator.SXNGPlugin:
