--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -1673,28 +1673,6 @@ engines:
     engine: seznam
     disabled: true
 
-  - name: mojeek
-    shortcut: mjk
-    engine: xpath
-    paging: true
-    categories: [general, web]
-    search_url: https://www.mojeek.com/search?q={query}&s={pageno}
-    results_xpath: //a[@class="ob"]
-    url_xpath: ./@href
-    title_xpath: ./h2
-    content_xpath: ../p[@class="s"]
-    suggestion_xpath: /html/body//div[@class="top-info"]/p[@class="top-info spell"]/a
-    first_page_num: 0
-    page_size: 10
-    disabled: true
-    about:
-      website: https://www.mojeek.com/
-      wikidata_id: Q60747299
-      official_api_documentation: https://www.mojeek.com/services/api.html/
-      use_official_api: false
-      require_api_key: false
-      results: HTML
-
   - name: naver
     shortcut: nvr
     categories: [general, web]
@@ -1841,52 +1819,6 @@ engines:
       require_api_key: false
       results: HTML
 
-  - name: petalsearch
-    shortcut: pts
-    engine: xpath
-    paging: true
-    search_url: https://petalsearch.com/search?query={query}&pn={pageno}
-    results_xpath: //div[@class="webpage-content"]/div[@class="title-cont"]/a
-    url_xpath: ./@href
-    title_xpath: .
-    content_xpath: ../../div[@class="webpage-text"]
-    suggestion_xpath: //div[@class="related-search-items"]/a
-    first_page_num: 1
-    disabled: true
-    about:
-      website: https://petalsearch.com/
-      wikidata_id: Q104399280
-      use_official_api: false
-      require_api_key: false
-      results: HTML
-
-  - name: petalsearch images
-    engine: petal_images
-    shortcut: ptsi
-    disabled: true
-    timeout: 3.0
-
-  - name: petalsearch news
-    shortcut: ptsn
-    categories: news
-    engine: xpath
-    paging: true
-    search_url: https://petalsearch.com/search?channel=news&query={query}&pn={pageno}
-    results_xpath: //div[@class="news-container"]/div/div/div/a
-    url_xpath: ./@href
-    title_xpath: ./div
-    content_xpath: ../div[@class="news-text"]
-    thumbnail_xpath: ../../../../img/@src
-    first_page_num: 1
-    disabled: true
-    about:
-      website: https://petalsearch.com/
-      wikidata_id: Q104399280
-      use_official_api: false
-      require_api_key: false
-      results: HTML
-
-
 search:
   safe_search: 0 # No filtering
   autocomplete: "duckduckgo" # Enable a more reliable autocomplete source
@@ -1917,6 +1849,9 @@ server:
   image_proxy: true
   http_protocol_version: "1.1" # Use the latest protocol for better performance
   method: "GET" # Use GET for better user experience
+  # Add CORS headers (optional but useful)
+  default_http_headers:
+    Access-Control-Allow-Origin: "*"  # or your Streamlit domain
   default_http_headers:
     X-Content-Type-Options: nosniff
     X-Download-Options: noopen
