--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -2,7 +2,7 @@ use_default_settings: true
 
 general:
   debug: false
-  instance_name: "TrippleK SearXNG"
+  instance_name: "Still Mind"
   privacypolicy_url: false
   donation_url: false
   contact_url: false
@@ -28,7 +28,7 @@ search:
     - json
 
 server:
-  secret_key: "CHANGE_ME_IN_RENDER_ENV"
+  secret_key: y38utbjwy84gwue79ybnwj
   limiter: false
   public_instance: false
   image_proxy: true
